# kbp2video

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
kbp2video/: __init__.py  __main__.py  _ffmpegcolor.py  _gui.py  advanced_editor.py  advanced_options.py  progress_window.py  track_table.py  utils.py
packaging/: README.txt  build_windows_installer.py  installer.cfg.template  kbp2video.pyw
