[project]
name = "kbp2video"
dynamic = ["version"]
dependencies = [
    "PySide6-Essentials < 6.7",
    "ffmpeg-python",
    "kbputils >= 0.0.11",
    "lastversion"
]
[project.scripts]
kbp2video = "kbp2video._gui:run"
[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
include = ["kbp2video"]
[tool.setuptools.dynamic]
version = {attr = "kbp2video.__version__"}
